# parameter-golf-fork

./: .gitignore  README.md  pyproject.toml
records/track_10min_16mb/2026-03-20_PiyushDattaSubmission/: README.md  baseline.json  claude_agents_task_board.md  context.md  last_result.json  notes.md  profiler_do_not_touch.py  run_experiment.py  skip_connection_analysis.json  submission.json  taskboard_lock.sh  train_gpt.py  train_gpt_do_not_touch.py  train_gpt_readable.py
records/track_10min_16mb/2026-03-20_PiyushDattaSubmission/experiment_results/: exp153_optrot_1775249498.json  exp154_muon3_1775251916.json  exp155_10L_dim576_1775252040.json  exp155_10L_dim576_1775254804.json  exp156_momentum_fix_1775261397.json  exp157_wd0_1775261469.json  exp157_wd0_fixed_1775263654.json  exp158_momentum095_1775265896.json  exp159_noclip_mom095_1775268174.json  exp160_warmdown200_mom095_1775270598.json  exp161_qkgain1.5_mom095_1775272907.json  exp162_nssteps5_mom095_1775275333.json  exp163_wd002_mom095_1775339082.json  exp164_final_defaults_1775341459.json  (+10 more)
records/track_10min_16mb/2026-04-17_PiyushDatta_SP8192_SWA_HalfBatch_MLP4x_ParResid/: README.md  generate_submission_logs.py  runpod_8xh100_parameter_golf_setup.md
records/track_10min_16mb/2026-04-27_PiyushDatta_SP8192_DepthRecur_PolarNS_SWA1_QK4/: README.md  precompute_teacher_logits.py  run_3seeds.sh  runpod_8xh100_parameter_golf_setup.md  submission.json  train_gpt.py  train_gpt_readable.py
records/track_10min_16mb/2026-04-30_PiyushDatta_SP8192_DepthRecur_PolarNS_LoRATTT/: README.md  logs_summary.md  submission.json
