[project]
name = "parameter-golf-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.1",
    "numpy>=2.4.3",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.3",
]
